--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "ng lint -- --fix",
+    "prettier": "pretty-quick --staged",
     "e2e": "ng e2e"
   },
   "dependencies": {
@@ -21,8 +23,8 @@
     "@angular/router": "~10.2.0",
     "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.3.1",
+    "prettier": "^2.1.2",
     "rxjs": "~6.6.0",
-    "shallow-render": "^10.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -33,11 +35,25 @@
     "@angular/compiler-cli": "~10.2.0",
     "@types/node": "^12.11.1",
     "@types/jest": "^26.0.0",
-    "jest": "^26.6.1",
     "codelyzer": "^6.0.0",
-    "protractor": "~7.0.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.5.0",
+    "pretty-quick": "^3.1.0",
+    "shallow-render": "^10.2.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": [
+      "pretty-quick --staged",
+      "git add"
+    ]
   }
 }
