Run lint and prettier in project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,6 @@
     "typeRoots": ["node_modules/@types"],
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"]
   }
 }
