--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "mocked": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mocked.ts"
+                }
+              ]
             }
           }
         },
@@ -66,6 +74,9 @@
           "configurations": {
             "production": {
               "browserTarget": "angular-skeleton:build:production"
+            },
+            "mocked": {
+              "browserTarget": "my-documents:build:mocked"
             }
           }
         },
