--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": false,
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
+    "start:mocked": "ng serve --configuration=mocked -",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +22,10 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/router-store": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
     "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.3.1",
     "prettier": "^2.1.2",
@@ -33,8 +38,8 @@
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
-    "@types/node": "^12.11.1",
     "@types/jest": "^26.0.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
