--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/router-store": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "@ngx-translate/core": "^13.0.0",
     "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.3.1",
     "prettier": "^2.1.2",
